Fixed nav bar left display, align of index when going to diplay all caves

--- a/app/assets/stylesheets/components/_caves_index.scss
+++ b/app/assets/stylesheets/components/_caves_index.scss
@@ -1,6 +1,8 @@
 #index {
   color: $semi-black;
-  font-family: JFRocSol
+  font-family: JFRocSol;
+  padding-top: 90px;
+  margin-top: -70px;
 }
 
 .container-margin-top {
